Bug 1544710 - ensure that selected row is always visible within TreeView after update. Clean up scroll into view operations across all uses of TreeView. r=mtigley
Differential Revision: https://phabricator.services.mozilla.com/D29342

UltraBlame original commit: 66c1e6f5276fc3bbf3fa1f0f68f129844aa9dcdc

--- a/devtools/client/accessibility/accessibility.css
+++ b/devtools/client/accessibility/accessibility.css
@@ -12,6 +12,7 @@
   --accessibility-horizontal-padding: 5px;
   --accessibility-horizontal-indent: 20px;
   --accessibility-properties-item-width: calc(100% - var(--accessibility-horizontal-indent));
+  --accessibility-tree-height: calc(100vh - var(--accessibility-toolbar-height) * 2 - 1px);
   --accessibility-arrow-horizontal-padding: 4px;
   --accessibility-tree-row-height: 21px;
   --accessibility-unfocused-tree-focused-node-background: var(--grey-20);
@@ -71,14 +72,14 @@ body {
   fill: var(--theme-selection-color);
 }
 
-.mainFrame .main-panel {
-  flex: 1 1 auto;
-  overflow: auto;
-}
-
 .mainFrame {
   height: 100%;
   color: var(--theme-toolbar-color);
+}
+
+.main-panel {
+  
+  width: var(--accessibility-full-length-minus-splitter);
 }
 
 .devtools-button,
@@ -225,24 +226,30 @@ body {
 }
 
 
-.split-box:not(.horz) .main-panel {
-  height: calc(100vh - var(--accessibility-toolbar-height));
+.treeTable thead, .treeTable tbody {
+  display: block;
 }
 
-.treeTable > thead {
-  position: sticky;
-  top: 0;
+.treeTable tr {
+  width: 100%;
+  display: table;
+}
+
+.treeTable tbody {
+  overflow-y: auto;
+}
+
+.split-box:not(.horz) .treeTable tbody {
+  height: var(--accessibility-tree-height);
+}
+
+.split-box.horz .treeTable tbody {
   
 
-  z-index: 1;
+  height: calc(var(--accessibility-tree-height) - var(--split-box-controlled-panel-size) - 1px);
 }
 
-.split-box:not(.horz) .treeTable {
-  
-  width: var(--accessibility-full-length-minus-splitter);
-}
-
-.split-box.horz .treeTable {
+.treeTable {
   width: 100%;
 }
 
@@ -318,6 +325,7 @@ body {
 }
 
 .mainFrame .treeTable .treeHeaderCell {
+  width: 50%;
   border-bottom: 1px solid var(--theme-splitter-color);
   background: var(--theme-toolbar-background);
   font: message-box;
